단일 회원 상세 조회 추가
